# GooGym2D

./: README.md  pyproject.toml
googym2d/: __init__.py  config.py  env.py  fem.py  graph.py
tests/: test_env.py
