[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "googym2d"
version = "0.1.0"
description = "Gymnasium-based 2D bridge construction environment for reinforcement and imitation learning."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.0",
    "numpy>=1.26",
    "shapely>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
packages = ["googym2d"]

